# espresso

./: .gitignore  README.md  espresso.cabal  stack.yaml
app/: Main.hs
src/: Barista.hs  Data.hs  Utils.hs
test/: BaristaSpec.hs  DataSpec.hs  Spec.hs
