name:                espresso
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/espresso#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Barista
                     , Constants
                     , Data
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , scotty
                     , wai
                     , postgresql-simple
                     , transformers
                     , text
                     , resource-pool
                     , containers
  default-extensions:  OverloadedStrings
                     , QuasiQuotes
                     , DeriveGeneric
                     , RecordWildCards
  default-language:    Haskell2010


executable espresso-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , espresso
  default-language:    Haskell2010

test-suite espresso-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , espresso
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
                     , containers
  default-extensions:  OverloadedStrings
                     , QuasiQuotes
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/espresso
